Pages broken out

--- a/New Text Document.html
+++ b/New Text Document.html
@@ -13,7 +13,8 @@
     <button id="btn2" onclick="myRetrieval()">Retrieve</button>
     <button id="btn3" onclick="myArray()">Arrays</button>
     <button id="btn3" onclick="retrieveArray()">Retrieve Array</button>
-    <button id="btn4" onclick="myObject()">Associative Array and Object</button>
+    <button id="btn4" onclick="myObject()">Associative Array and Object</button><br>
+    <a href="index.html">Link to Lesson 1</a>
     <script>
         function myFunction() {
             alert("string should be: " );
