--- a/index.html
+++ b/index.html
@@ -2,25 +2,14 @@
 <html>
 <body>
 
-<h2>JSON Stringify and Parse Demo</h2>
-<p>Object: <br> Name: John<br>  Age:30 <br> City:New York</p>
+<h2>Mark's Website</h2>
 <p id="demo"></p>
-<button id="btn1" onclick="stringness()">Stringify</button>
-<button id="btn1" onclick="parsenes()">Parse</button>
-<script>
 
-    function stringness(){
-        var obj = { "name":"John", "age":30, "city":"New York"};
-        var myJSON = JSON.stringify(obj);
-        document.getElementById("demo").innerHTML = myJSON;
-        alert(myJSON);
-}
-    function parsenes(){
-        var obj = JSON.parse('{ "name":"John", "age":30, "city":"New York"}');
-        document.getElementById("demo").innerHTML = obj.name + ", " + obj.age;
-        alert(obj.name + ", " + obj.age);
-    }
-</script>
+    <ul style="list-style-type:disc">
+        <li><a href="New%20Text%20Document.html">Link to Lesson 1(Local Storage)</a></li>
+        <li><a href="JSON.html">Link to Lesson 2(JSON)</a></li>
+    </ul>
+
 
 </body>
 </html>
