Tag Demo Upload

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ul style="list-style-type:disc">
         <li><a href="New%20Text%20Document.html">Link to Lesson 1(Local Storage)</a></li>
         <li><a href="JSON.html">Link to Lesson 2(JSON)</a></li>
+        <li><a href="Tag Demo.html">Link to Lesson 3(Tags)</a></li>
     </ul>
 
 
