--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <li><a href="New%20Text%20Document.html">Link to Lesson 1(Local Storage)</a></li>
         <li><a href="JSON.html">Link to Lesson 2(JSON)</a></li>
         <li><a href="Tag Demo.html">Link to Lesson 3(Tags)</a></li>
+        <li><a href="Animations.html">Link to Lesson 4(Animations)</a></li>
     </ul>
 
 
