--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li><a href="JSON.html">Link to Lesson 2(JSON)</a></li>
         <li><a href="Tag Demo.html">Link to Lesson 3(Tags)</a></li>
         <li><a href="Animations.html">Link to Lesson 4(Animations)</a></li>
+        <li><a href="Object%20Demo.html">Link to Lesson 5(Objects)</a></li>
     </ul>
 
 
